--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "pinia": "^2.0.32",
     "vue": "^3.2.47"
   },
